加一個放註解用的 Placeholder

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/BondDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/BondDetail.cshtml
@@ -387,6 +387,8 @@
                             </table>
                         </div>
                     </section>
+
+                    @Html.Sitecore().Placeholder("BondDetailHistoryPrice")
                 </div>
                 <div class="l-flex__item"></div>
             </section>
