改一下位置

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/BondDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/BondDetail.cshtml
@@ -388,9 +388,10 @@
                         </div>
                     </section>
 
+                </div>
+                <div class="l-flex__item">
                     @Html.Sitecore().Placeholder("BondDetailHistoryPrice")
                 </div>
-                <div class="l-flex__item"></div>
             </section>
         </div>
         <div class="c-tab__panel" data-tab-panel-id="tab-3">
