修正首頁人氣國外債券4號

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
@@ -738,7 +738,7 @@
                                                     string rankingClass = ranking == 1 ? "<span class=\"o-ranking o-ranking--1st\" data-before-lt=\"排行\"><i></i></span>" :
                                                     ranking == 2 ? "<span class=\"o-ranking o-ranking--2st\" data-before-lt=\"排行\"><i></i></span>" :
                                                     ranking == 3 ? "<span class=\"o-ranking o-ranking--3st\" data-before-lt=\"排行\"><i></i></span>" :
-                                                    "<span class=\"o-ranking o-ranking\" data-before-lt=\"排行\"><span>" + itemCountUSStock + "</span></span>";
+                                                    "<span class=\"o-ranking o-ranking\" data-before-lt=\"排行\"><span>" + itemCountBond + "</span></span>";
                                                 }
                                                 @(new HtmlString(rankingClass))
                                             </div>
