#4597 首頁搜尋為基金跟ETF的autocomplete下拉搜尋框內加上”比較”按鈕 #4587 首頁搜尋元件 - 新增國外債搜尋功能

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -255,6 +255,7 @@
             let compare = store.get('compare') || [];
             if (checkItemExists('compare', id)) {
                 $(self).addClass('is-active');
+                self.setAttribute('data-tooltip', '取消比較');
                 self.setAttribute('eh-compare-add', true);
             } else {
                 $(self).removeClass('is-active');
